fix: replace '<' with '&lt;' in html template

--- a/emt4j-analysis/src/main/resources/html-report.vm
+++ b/emt4j-analysis/src/main/resources/html-report.vm
@@ -60,7 +60,7 @@
       #else
            <pre>
            #foreach ($stackTrace in $context.stackTrace)
-           $stackTrace
+           $stackTrace.replaceAll("<", "&lt;")
            #end
            </pre>
       #end
