--- a/emt4j-analysis/src/main/resources/html-report.vm
+++ b/emt4j-analysis/src/main/resources/html-report.vm
@@ -16,8 +16,9 @@
 ## SPDX-License-Identifier: Apache-2.0
 <html>
 <head>
-<title>Migration Report</title>
+<title>$title</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='32' height='32'><text fill='red' x='50%' y='50%' font-size='22px' text-anchor='middle' dominant-baseline='central'>🗒️</text></svg>" type="image/svg+xml" />
 </head>
 <body>
 #if($data.isEmpty())
