--- a/emt4j-analysis/src/main/resources/html-report.vm
+++ b/emt4j-analysis/src/main/resources/html-report.vm
@@ -28,7 +28,7 @@
   #content { flex-shrink: 0; width: 320px; display: flex; flex-direction: column; overflow: hidden;}
   #resizer { flex-shrink: 0; width: 2px; cursor: ew-resize; background: rgb(240, 241, 244); }
   #resizer:hover { background: grey }
-  #main { flex-grow: 1; overflow-y: auto}
+  #main { flex-grow: 1; display: flex; flex-direction: column; overflow: hidden}
   .ce { border-radius: 6px; margin-bottom: 3px; cursor: pointer; padding: 7px 12px;}
   .ce:hover, .ce.active { background: rgb(229, 230, 230); }
   .ce.active { font-weight: 700; }
@@ -63,7 +63,7 @@
   <div id="resizer"></div>
   <div id="main">
   #foreach( $subdata in $data )
-    <div id="me$foreach.index" style="padding: 5px 25px; display: #if ($foreach.index == 0) block #else none #end">
+    <div id="me$foreach.index" style="padding: 5px 25px; flex-grow: 1; overflow-y: auto; display: #if ($foreach.index == 0) block #else none #end">
       <h1 style="margin-top: 0; padding-bottom: 7px; border-bottom: 1px solid hsla(210, 18%, 87%, 1);">$subdata.desc</h1>
       #foreach( $detail in $subdata.resultDetailList)
       <h2>${detail.detailId}. ${detail.title}</h2>
@@ -97,6 +97,13 @@
       #end
     </div>
   #end
+    <div class="ellipsis"
+         style="flex-shrink: 0; margin: 5px; padding: 7px 12px; border-top: 1px solid hsla(210, 18%, 87%, 1);
+                font-size: 14px; font-weight: 500; text-align: center">
+      <a href="https://github.com/adoptium/emt4j" target="_blank" style="text-decoration: none; color: #262626">
+        Eclipse Migration Toolkit
+      </a>
+    </div>
   </div>
 </div>
 </body>
