--- a/emt4j-analysis/src/main/resources/html-report.vm
+++ b/emt4j-analysis/src/main/resources/html-report.vm
@@ -101,7 +101,7 @@
          style="flex-shrink: 0; margin: 5px; padding: 7px 12px; border-top: 1px solid hsla(210, 18%, 87%, 1);
                 font-size: 14px; font-weight: 500; text-align: center">
       <a href="https://github.com/adoptium/emt4j" target="_blank" style="text-decoration: none; color: #262626">
-        Eclipse Migration Toolkit
+        Eclipse Migration Toolkit for Java
       </a>
     </div>
   </div>
